@@ -1,3 +1,7 @@
+* Thr Apr 13 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 7.3.1-0
+- Add 'puppet_enterprise::profile::primary_master_replica' class definition
+  to the class list to work around an issue in production
+
 * Tue Apr 04 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 7.3.0-0
 - Add 'package_ensure' to allow users to specify that they want to use 'latest' or 'installed'
 
